--- a/lab1-jquery/1-2.html
+++ b/lab1-jquery/1-2.html
@@ -1,2 +1,2 @@
-<!-- Design a calculate to perform basic arithmetic operations. 
+<!-- Design a calculator to perform basic arithmetic operations. 
  Use textboxes and buttons to design web pages. -->
